@@ -1,0 +1,7 @@
+extern char *x;
+char *x = "hello";
+
+int blah() {
+    extern char *x;
+    return *x++;
+}
